--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
+tempfile = "3.23.0"
+thiserror = "2"
+tokio = { version = "^1", features = ["full"] }
+tracing = { version = "0.1", default-features = false, optional = true }
+
+[features]
+default = []
+cli = []
+tracing = ["dep:tracing"]
