--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -7,7 +7,10 @@ edition.workspace = true
 tempfile = "3.23.0"
 thiserror = "2"
 tokio = { version = "^1", features = ["full"] }
-tracing = { version = "0.1", default-features = false, optional = true }
+tracing = { version = "0.1", optional = true }
+
+[dev-dependencies]
+tracing-subscriber = "0.3.20"
 
 [features]
 default = []
