--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -9,6 +9,16 @@ thiserror = "2"
 tokio = { version = "^1", features = ["full"] }
 tracing = { version = "0.1", optional = true }
 
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.159"
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.61", features = [
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_System_WindowsProgramming",
+] }
+
 [dev-dependencies]
 tracing-subscriber = "0.3.20"
 
