--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["crates/pg-ephemeral"]
+members = ["crates/pg-ephemeral", "crates/cli"]
 
 [workspace.package]
 edition = "2024"
