feat: added a example for showing containerized usage

--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -34,3 +34,9 @@ local = []
 
 cli = []
 tracing = ["dep:tracing"]
+
+
+[[example]]
+name = "containerized"
+path = "examples/containerized.rs"
+required-features = ["tracing", "containerized"]
