add compile-time errors for invalid feature flag combinations and fix cfg-related issue in error.rs - introduces clear compile_error! messages to enforce valid feature flag usage - correct a minor cfg mismatch inside error.rs that caused conditional compilation errors

--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -25,7 +25,7 @@ windows-sys = { version = "0.61", features = [
 tracing-subscriber = "0.3.20"
 
 [features]
-default = ["local", "containerized"]
+default = ["containerized"]
 
 # enables running postgres inside docker containers
 containerized = ["dep:testcontainers"]
