--- a/crates/pg-ephemeral/Cargo.toml
+++ b/crates/pg-ephemeral/Cargo.toml
@@ -6,7 +6,6 @@ edition.workspace = true
 [dependencies]
 tempfile = "3.23.0"
 thiserror = "2"
-tokio = { version = "^1", features = ["full"] }
 
 tracing = { version = "0.1", optional = true }
 testcontainers = { version = "0.26.0", optional = true }
@@ -23,9 +22,13 @@ windows-sys = { version = "0.61", features = [
 
 [dev-dependencies]
 tracing-subscriber = "0.3.20"
+tokio = { version = "^1", default-features = false, features = [
+    "macros",
+    "rt-multi-thread",
+] }
 
 [features]
-default = ["containerized"]
+default = []
 
 # enables running postgres inside docker containers
 containerized = ["dep:testcontainers"]
